--- a/tasks/package_common.yml
+++ b/tasks/package_common.yml
@@ -217,12 +217,18 @@
     path: "{{ pkg_dir }}/{{ package.path }}/gap/precompiled_categories/"
   register: precompiled_categories_dir
 
+- name: Check if package has notebooks
+  stat:
+    path: "{{ pkg_dir }}/{{ package.path }}/examples/notebooks/"
+  register: notebooks_dir
+
 - name: makefile
   template:
     src: makefile.j2
     dest: "{{ pkg_dir }}/{{ package.path }}/makefile"
   vars:
     has_precompiled_categories: "{{ precompiled_categories_dir.stat.exists }}"
+    has_notebooks: "{{ notebooks_dir.stat.exists }}"
   when: not package.docu_only
 
 - name: testall.g
@@ -260,4 +266,24 @@
   template:
     src: .gitignore.j2
     dest: "{{ pkg_dir }}/{{ package.path }}/.gitignore"
+  when: not package.docu_only
+
+- name: Notebooks binder link
+  replace:
+    path: "{{ cur_path }}"
+    regexp: "\\A(.*\n){10}"
+    replace: |
+      {
+       "cells": [
+        {
+         "cell_type": "markdown",
+         "id": "5dd5d895",
+         "metadata": {},
+         "source": [
+          "[![Binder](https://mybinder.org/badge_logo.svg)](https://gesis.mybinder.org/v2/gh/homalg-project/CapAndHomalgNotebooks/master?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Fhomalg-project%252F{{ package.name }}%26urlpath%3Dtree%252F{{ package.name }}%252Fexamples%252F%252Fnotebooks%252F{{ cur_path | basename }}%26branch%3Dmaster)"
+         ]
+        },
+  with_fileglob: "{{ pkg_dir }}/{{ package.path }}/examples/notebooks/*.ipynb"
+  loop_control:
+    loop_var: cur_path
   when: not package.docu_only
