Load GRAPE before loading Digraphs (dependency of Locales)
This changes the loading behavior of Digraphs < 1.5.0, which is needed for
compatibility with QPA.

--- a/site.yml
+++ b/site.yml
@@ -147,6 +147,7 @@
             - LinearAlgebraForCAP
             - GeneralizedMorphismsForCAP
             - Algebroids
+            - GRAPE
             - Locales
             - SubcategoriesForCAP
           tests_only_basic: true
