FinSetsForCAP now depends CategoryConstructor, since Toposes now does

--- a/site.yml
+++ b/site.yml
@@ -481,6 +481,7 @@
           needed_other_repositories:
             - homalg_project
             - CAP_project
+            - CategoryConstructor
             - Toposes
 
 - name: FinGSetsForCAP
