--- a/site.yml
+++ b/site.yml
@@ -175,6 +175,12 @@
           description: "Elementary toposes"
           doc_additional_latex_preamble: |
             \usepackage{mathtools}
+            \DeclareUnicodeCharacter{2205}{\ensuremath{\emptyset}}
+            \DeclareUnicodeCharacter{2C76}{\ensuremath{\vdash}\!\!}
+            \DeclareUnicodeCharacter{2192}{\ensuremath{\!\!\rightarrow\!}}
+            \DeclareUnicodeCharacter{21AA}{\ensuremath{\!\!\hookrightarrow\!}}
+            \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
+            \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
           needed_other_repositories:
             - homalg_project
             - CAP_project
