--- a/tasks/package_common.yml
+++ b/tasks/package_common.yml
@@ -276,7 +276,7 @@
          "id": "5dd5d895",
          "metadata": {},
          "source": [
-          "[![Binder](https://mybinder.org/badge_logo.svg)](https://gesis.mybinder.org/v2/gh/homalg-project/CapAndHomalgNotebooks/master?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Fhomalg-project%252F{{ package.name }}%26urlpath%3Dtree%252F{{ package.name }}%252Fexamples%252F%252Fnotebooks%252F{{ cur_path | basename }}%26branch%3Dmaster)"
+          "[![Binder](https://mybinder.org/badge_logo.svg)](https://gesis.mybinder.org/v2/gh/homalg-project/CapAndHomalgNotebooks/master?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Fhomalg-project%252F{{ package.repo }}%26urlpath%3Dtree%252F{{ package.path | replace("/", "%252F") }}%252Fexamples%252F%252Fnotebooks%252F{{ cur_path | basename }}%26branch%3Dmaster)"
          ]
         },
   with_fileglob: "{{ pkg_dir }}/{{ package.path }}/examples/notebooks/*.ipynb"
