--- a/tasks/ci.yml
+++ b/tasks/ci.yml
@@ -22,11 +22,16 @@
     src: .codecov.yml.j2
     dest: "{{ pkg_dir }}/{{ package.name }}/.codecov.yml"
 
-- name: process_coverage_ignored_lines.py
+- name: process_coverage.py
   copy:
-    src: process_coverage_ignored_lines.py
-    dest: "{{ pkg_dir }}/{{ package.name }}/process_coverage_ignored_lines.py"
+    src: process_coverage.py
+    dest: "{{ pkg_dir }}/{{ package.name }}/process_coverage.py"
     mode: a+x
+
+- name: Remove process_coverage_ignored_lines.py
+  file:
+    path: "{{ pkg_dir }}/{{ package.name }}/process_coverage_ignored_lines.py"
+    state: absent
 
 - name: upload_codecov.sh
   template:
