Test FreydCategoriesForCAP in Algebroids

--- a/site.yml
+++ b/site.yml
@@ -363,7 +363,9 @@
           - FinSetsForCAP
           - SubcategoriesForCAP
           - CatReps
+          - FreydCategoriesForCAP
         ci_additional_packages_to_test:
+          - FreydCategoriesForCAP
           - FunctorCategories
           - CatReps
 
