--- a/site.yml
+++ b/site.yml
@@ -25,6 +25,25 @@
               - homalg_project
               - CAP_project
             tests_only_basic: true
+          - name: PreSheaves
+            description: Categories of (co)presheaves
+            doc_additional_latex_preamble: |
+              \usepackage{mathtools}
+              \DeclareUnicodeCharacter{2205}{\ensuremath{\emptyset}}
+              \DeclareUnicodeCharacter{2C76}{\ensuremath{\vdash}\!\!}
+              \DeclareUnicodeCharacter{2192}{\ensuremath{\!\!\rightarrow\!}}
+              \DeclareUnicodeCharacter{21AA}{\ensuremath{\!\!\hookrightarrow\!}}
+              \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
+              \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
+            needed_other_repositories:
+              - homalg_project
+              - CAP_project
+            tests_additional_packages_to_load:
+              - FinSetsForCAP
+            tests_only_basic: true
+        ci_additional_repositories:
+          - Toposes
+          - FinSetsForCAP
 
 - name: ExteriorPowersCategories
   hosts: ExteriorPowersCategories
@@ -1139,6 +1158,7 @@
               - path:              CAP_project/ModulePresentationsForCAP
               - path:              CAP_project/ModulesOverLocalRingsForCAP
               - path:              CAP_project/MonoidalCategories
+              - path:        CategoricalTowers/PreSheaves
               - path:                          QPA2
               - path: HigherHomologicalAlgebra/QuotientCategories
               - path: HigherHomologicalAlgebra/StableCategories
