Revert "updated FunctorCategories"
This reverts commit 5b79eb4d4f10522c16302496e63e4977b1aeb33f.

--- a/site.yml
+++ b/site.yml
@@ -384,6 +384,7 @@
           needed_other_repositories:
             - homalg_project
             - CAP_project
+            - CategoryConstructor
             - HigherHomologicalAlgebra
             - QPA2
             - Algebroids
