--- a/site.yml
+++ b/site.yml
@@ -398,6 +398,7 @@
             \DeclareUnicodeCharacter{21AA}{\ensuremath{\!\!\hookrightarrow\!}}
             \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
             \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
+            \DeclareUnicodeCharacter{21A6}{\ensuremath{\mapsto}}
           tests_only_basic: true
         ci_additional_repositories:
           - Toposes
