--- a/site.yml
+++ b/site.yml
@@ -91,13 +91,33 @@
               - LazyCategories
             tests_only_basic: true
             tests_without_precompiled_code: true
+          - name: SubcategoriesForCAP
+            description: "Subcategory and other related constructors for CAP categories"
+            has_HOMALG_IO: true
+            doc_additional_latex_preamble: |
+              \usepackage{mathtools}
+              \DeclareUnicodeCharacter{2205}{\ensuremath{\emptyset}}
+              \DeclareUnicodeCharacter{2C76}{\ensuremath{\vdash}\!\!}
+              \DeclareUnicodeCharacter{2192}{\ensuremath{\!\!\rightarrow\!}}
+              \DeclareUnicodeCharacter{21AA}{\ensuremath{\!\!\hookrightarrow\!}}
+              \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
+              \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
+            needed_other_repositories:
+              - homalg_project
+              - CAP_project
+            tests_additional_packages_to_load:
+              - IO_ForHomalg
+              - FreydCategoriesForCAP
+              - FinSetsForCAP
+              - Locales
+            tests_only_basic: true
+            tests_without_precompiled_code: true
         ci_additional_repositories:
           - HigherHomologicalAlgebra
           - QPA2
           - Algebroids
           - FinSetsForCAP
           - ZariskiFrames
-          - SubcategoriesForCAP
           - LazyCategories
         ci_additional_packages_to_test:
           - FinSetsForCAP
@@ -1219,7 +1239,7 @@
               - path:                          QPA2
               - path: HigherHomologicalAlgebra/QuotientCategories
               - path: HigherHomologicalAlgebra/StableCategories
-              - path:                          SubcategoriesForCAP
+              - path:        CategoricalTowers/SubcategoriesForCAP
               - path:        CategoricalTowers/Toposes
               - path:              CAP_project/ToricSheaves
               - path: HigherHomologicalAlgebra/TriangulatedCategories
