--- a/site.yml
+++ b/site.yml
@@ -170,6 +170,18 @@
               - RingsForHomalg
               - IO_ForHomalg
             tests_only_basic: true
+          - name: IntrinsicModules
+            description: "Finitely presented modules over computable rings allowing multiple presentations and the notion of elements"
+            has_HOMALG_IO: true
+            doc_additional_latex_preamble: |
+              \usepackage{mathtools}
+            needed_other_repositories:
+              - homalg_project
+              - CAP_project
+            tests_additional_packages_to_load:
+              - RingsForHomalg
+              - IO_ForHomalg
+            tests_only_basic: true
         ci_additional_repositories:
           - HigherHomologicalAlgebra
           - QPA2
@@ -1288,7 +1300,7 @@
               - path:                          InternalModules
               - path:        CategoricalTowers/IntrinsicCategories
               - path:                          IntrinsicGradedModules
-              - path:                          IntrinsicModules
+              - path:        CategoricalTowers/IntrinsicModules
               - path:        CategoricalTowers/LazyCategories
               - path:              CAP_project/LinearAlgebraForCAP
               - path:        CategoricalTowers/Locales
